# simple-server

./: .travis.yml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md
ci-scripts/: rustfmt.sh
examples/: dynamic_response.rs  headers.rs  routes.rs  server.rs  simple-server.rs
examples/public/: static.html
src/: error.rs  lib.rs  main.rs  parsing.rs  request.rs
tests/: simple-server.rs
