[package]
name = "simple-server"
version = "0.1.0"
license = "MIT/Apache-2.0"
authors = ["steveklabnik <steve@steveklabnik.com>", "ashleygwilliams <ashley666ashley@gmail.com>"]

[dependencies]
http = "0.1.0"
httparse = "1.2.3"
log = "0.3"
scoped_threadpool = "0.1.7"

[dev-dependencies]
env_logger = "0.3"
